--- a/app/src/main/res/layout/activity_service_provider_main.xml
+++ b/app/src/main/res/layout/activity_service_provider_main.xml
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="50dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:orientation="horizontal"
@@ -62,6 +62,17 @@
 
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/forgetPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="Forget Password?"
+        android:layout_marginBottom="15sp"
+        android:textColor="#FAFAFA"
+        android:layout_gravity="center" />
 
 
 </RelativeLayout>
