--- a/app/src/main/res/layout/activity_service_provider_maps.xml
+++ b/app/src/main/res/layout/activity_service_provider_maps.xml
@@ -1,97 +1,118 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
+    android:id="@+id/service_provider_map"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.fahad.publicservices.ServiceProviderMapsActivity">
 
 
+
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout="@layout/activity_customer_maps" />
+
+
+
     <LinearLayout
+        android:id="@+id/userproblem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_gravity="bottom">
+        android:background="@android:color/white"
+        android:gravity="center"
+        android:layout_margin="15sp"
+        android:visibility="gone">
+
+        <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="REQUEST DETAILS"
+        android:layout_gravity="center"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:paddingTop="10sp"/>
+
+        <ImageView
+            android:layout_width="150sp"
+            android:layout_height="150sp"
+            android:layout_gravity="center"
+            android:id="@+id/userimageProblem"
+            android:src="@drawable/no_image"
+            android:padding="10sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:maxLines="5"
+            android:minLines="1"
+            android:singleLine="false"
+            android:layout_marginRight="10sp"
+            android:layout_marginLeft="10sp"
+            android:id="@+id/userTextProblem" />
+
+        <Button
+            android:id="@+id/gotIt"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="7sp"
+            android:layout_marginBottom="10sp"
+            android:text="GOT IT"/>
+    </LinearLayout>
+
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/userinfo"
+        android:layout_gravity="bottom"
+        android:orientation="vertical"
+        android:background="@android:color/white"
+        android:visibility="gone">
 
         <LinearLayout
-            android:layout_alignParentTop="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/CustomerInfo"
-            android:gravity="bottom"
-            android:orientation="horizontal"
-            android:background="@android:color/white"
-            android:visibility="gone">
-                <ImageView
-                    android:layout_width="100sp"
-                    android:layout_height="100sp"
-                    android:id="@+id/CustomerProfileImage"
-                    android:src="@drawable/profile"
-                    android:padding="20sp" />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:paddingLeft="40sp">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:id="@+id/CustomerName"
-                                android:paddingBottom="10sp"
-                                android:paddingTop="20sp"/>
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:id="@+id/CustomerPhone"
-                                android:paddingBottom="10sp"
-                                android:paddingTop="20sp"/>
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:id="@+id/CustomerDistination"
-                                android:paddingBottom="10sp"
-                                android:text="Distination: --"/>
-                    </LinearLayout>
-
-
-
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center"
+                android:layout_margin="7sp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="17sp"
+                    android:textColor="@color/black"
+                    android:layout_marginLeft="7sp"
+                    android:drawableLeft="@drawable/person"
+                    android:id="@+id/username" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30sp"
+                    android:textSize="17sp"
+                    android:textColor="@color/black"
+                    android:drawableLeft="@drawable/phone"
+                    android:id="@+id/userphone" />
 
         </LinearLayout>
 
 
-        <!-- ============================================================================== -->
 
 
-        <android.support.v7.widget.CardView
-            app:cardElevation="10dp"
-            android:layout_width="match_parent"
+        <Button
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true">
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_margin="16dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-
-                <Button
-                    android:id="@+id/btn_logout"
-                    android:text="Logout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
-
-
+            android:layout_width="match_parent"
+            android:text="picked customer"
+            android:id="@+id/WorkStatus"/>
     </LinearLayout>
 
 
-</fragment>
+</FrameLayout>
