--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,7 @@
     <color name="ballReleaseColor">#9E9E9E</color>
 
     <color name="emailMassege">#b9b8b8</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
 
 </resources>
