--- a/app/src/main/res/layout/activity_customer_maps.xml
+++ b/app/src/main/res/layout/activity_customer_maps.xml
@@ -48,16 +48,17 @@
         android:layout_gravity="bottom">
 
 
-        <LinearLayout
+        <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/DriverInfo"
             android:layout_gravity="center"
             android:layout_margin="20sp"
+            app:corner_radius="16sp"
             android:orientation="vertical"
             android:background="@android:color/white"
             android:visibility="gone">
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="150sp"
                 android:layout_height="150sp"
                 android:layout_gravity="center"
@@ -71,8 +72,7 @@
                 android:textSize="30sp"
                 android:textColor="@color/black"
                 android:id="@+id/DriverName"
-                android:drawableLeft="@drawable/person"
-                 />
+                android:drawableLeft="@drawable/person" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -82,18 +82,23 @@
                 android:id="@+id/DriverPhone"
                 android:drawableLeft="@drawable/phone"
                 android:padding="10sp"/>
+            <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/ratingBar"
+                android:layout_gravity="center"
+                android:numStars="5"
+                android:stepSize="0.1"/>
             <Button
                 android:id="@+id/gotIt"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10sp"
                 android:layout_marginBottom="10sp"
                 android:text="GOT IT"/>
+        </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>
 
-
-
-
-        </LinearLayout>
 
         <!-- ============================================================================== -->
 
@@ -137,16 +142,16 @@
                             android:text="electration" />
 
                         <RadioButton
-                            android:id="@+id/CarWash"
+                            android:id="@+id/car_wash"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="carwash" />
+                            android:text="car_wash" />
 
                         <RadioButton
-                            android:id="@+id/carfix"
+                            android:id="@+id/car_fix"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="carfix" />
+                            android:text="car_fix" />
 
                         <RadioButton
                             android:id="@+id/plumber"
@@ -167,10 +172,10 @@
                             android:text="carpenter" />
 
                         <RadioButton
-                            android:id="@+id/mobileRepair"
+                            android:id="@+id/mobile_repair"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="mobilerepair" />
+                            android:text="mobile_repair" />
 
                         <RadioButton
                             android:id="@+id/doctor"
