--- a/app/src/main/res/layout/activity_service_provider_maps.xml
+++ b/app/src/main/res/layout/activity_service_provider_maps.xml
@@ -16,16 +16,76 @@
         android:layout_height="match_parent"
         tools:layout="@layout/activity_customer_maps" />
 
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Working"
+        android:checked="true"
+        android:layout_margin="10sp"
+        android:id="@+id/workingS"/>
 
 
-    <LinearLayout
+
+    <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
+        android:id="@+id/payment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@android:color/white"
+        android:layout_gravity="center"
+        android:layout_margin="15sp"
+        app:corner_radius="16sp"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PAYMENT DETAILS"
+            android:layout_gravity="center"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:paddingTop="10sp"
+            android:layout_marginBottom="40sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Please enter the agreed price"
+            android:layout_gravity="center"
+            android:textSize="17sp"
+            android:textColor="@color/black" />
+
+        <EditText
+            android:layout_width="100sp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:inputType="number"
+            android:id="@+id/price"/>
+
+        <Button
+            android:id="@+id/Submit"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="10sp"
+            android:text="Submit"/>
+    </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>
+
+
+
+    //==========================================================================
+
+    <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
         android:id="@+id/userproblem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@android:color/white"
-        android:gravity="center"
+        android:layout_gravity="center"
         android:layout_margin="15sp"
+        app:corner_radius="16sp"
         android:visibility="gone">
 
         <TextView
@@ -65,7 +125,7 @@
             android:layout_marginTop="7sp"
             android:layout_marginBottom="10sp"
             android:text="GOT IT"/>
-    </LinearLayout>
+    </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>
 
 
 
@@ -110,7 +170,7 @@
         <Button
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:text="picked customer"
+            android:text=""
             android:id="@+id/WorkStatus"/>
     </LinearLayout>
 
