--- a/app/src/main/res/layout/customer_service_details.xml
+++ b/app/src/main/res/layout/customer_service_details.xml
@@ -25,26 +25,27 @@
             android:layout_gravity="center"
             android:paddingTop="10sp"/>
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imageProblem"
-            android:layout_width="match_parent"
-            android:layout_height="150sp"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:src="@drawable/add_image"
             android:layout_marginBottom="20sp"
             android:layout_marginTop="70sp"
-            android:src="@drawable/no_image" />
+            android:layout_gravity="center"/>
 
 
         <EditText
             android:id="@+id/TextProblem"
             android:layout_width="match_parent"
-            android:layout_height="200sp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="20sp"
             android:hint="Description"
-            android:maxLines="5"
-            android:minLines="1"
-            android:ems="5"
+            android:ems="10"
             android:background="#FFDEDCDC"
-            android:inputType="text" />
+            android:inputType="textMultiLine"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
 
         <Button
             android:id="@+id/Confirm"
