--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -15,13 +15,14 @@
         android:background="#21c1de"
         android:orientation="vertical">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/profile"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:src="@drawable/add_image"
             android:layout_gravity="center"
-            android:layout_marginTop="40sp"/>
+            android:layout_marginTop="40sp"
+            />
 
     </LinearLayout>
 
@@ -43,17 +44,6 @@
             android:textSize="20sp"
             android:textColor="@color/black_overlay"/>
 
-
-        <EditText
-            android:id="@+id/edtPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10sp"
-            android:maxLines="1"
-            android:hint="Password"
-            android:inputType="number"
-            android:padding="10sp"
-            android:textSize="20sp" />
 
         <EditText
             android:id="@+id/edtName"
