--- a/app/src/main/res/layout/select_service.xml
+++ b/app/src/main/res/layout/select_service.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/rootLayout"
     tools:context="com.example.fahad.publicservices.SelectService">
 
     <LinearLayout
@@ -69,7 +70,7 @@
             android:layout_weight="2">
 
             <ImageView
-                android:id="@+id/mobile_fix"
+                android:id="@+id/mobile_repair"
                 android:layout_width="0sp"
                 android:layout_height="wrap_content"
                 android:src="@drawable/mobilefix"
