--- a/app/src/main/res/layout/activity_service_provider_maps.xml
+++ b/app/src/main/res/layout/activity_service_provider_maps.xml
@@ -61,6 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:inputType="number"
+            android:text="0"
             android:id="@+id/price"/>
 
         <Button
