--- a/app/src/main/res/layout/customer_menu_page.xml
+++ b/app/src/main/res/layout/customer_menu_page.xml
@@ -15,74 +15,80 @@
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
-         android:gravity="center"
          android:orientation="vertical"
-         android:weightSum="5">
+         android:gravity="center">
 
-         <Button
+
+     <Button
              android:id="@+id/Request_Services"
              android:layout_width="match_parent"
-             android:layout_height="0sp"
-             android:layout_weight="1"
-             android:layout_margin="20sp"
+             android:layout_height="wrap_content"
+             android:layout_marginRight="10sp"
+             android:layout_marginLeft="10sp"
+             android:layout_marginBottom="15sp"
+             android:paddingTop="5sp"
+             android:textColor="#ffffff"
+             android:textSize="26sp"
              android:background="#21c1de"
              android:drawableTop="@drawable/request_services"
-             android:paddingTop="10sp"
-             android:text="Request Services"
-             android:textColor="#ffffff"
-             android:textSize="32sp" />
+             android:text="Request Services" />
 
          <Button
              android:id="@+id/Previous_Request_Customer"
              android:layout_width="match_parent"
-             android:layout_height="0sp"
-             android:layout_weight="1"
-             android:layout_margin="20sp"
+             android:layout_height="wrap_content"
+             android:layout_marginRight="10sp"
+             android:layout_marginLeft="10sp"
+             android:layout_marginBottom="15sp"
+             android:paddingTop="5sp"
              android:background="#ffffff"
              android:drawableTop="@drawable/list"
-             android:paddingTop="10sp"
              android:text="Previous Request"
              android:textColor="#83838c"
-             android:textSize="32sp" />
+             android:textSize="25sp"
+             />
 
          <Button
              android:id="@+id/Edit_Profile"
              android:layout_width="match_parent"
-             android:layout_height="0sp"
-             android:layout_weight="1"
-             android:layout_margin="20sp"
-             android:background="#ffffff"
-             android:drawableTop="@drawable/edit"
-             android:paddingTop="10sp"
+             android:layout_height="wrap_content"
              android:text="Edit Profile"
+             android:layout_marginRight="10sp"
+             android:layout_marginLeft="10sp"
+             android:layout_marginBottom="15sp"
+             android:paddingTop="5sp"
              android:textColor="#83838c"
-             android:textSize="32sp" />
+             android:textSize="26sp"
+             android:background="#ffffff"
+             android:drawableTop="@drawable/edit"/>
 
          <Button
              android:id="@+id/Contact_Us"
              android:layout_width="match_parent"
-             android:layout_height="0sp"
-             android:layout_weight="1"
-             android:layout_margin="20sp"
-             android:background="#ffffff"
-             android:drawableTop="@drawable/support"
-             android:paddingTop="10sp"
+             android:layout_height="wrap_content"
              android:text="Contact Us"
+             android:layout_marginRight="10sp"
+             android:layout_marginLeft="10sp"
+             android:layout_marginBottom="15sp"
+             android:paddingTop="5sp"
              android:textColor="#83838c"
-             android:textSize="32sp" />
+             android:textSize="26sp"
+             android:background="#ffffff"
+             android:drawableTop="@drawable/support"/>
 
          <Button
              android:id="@+id/Log_Out"
              android:layout_width="match_parent"
-             android:layout_height="0sp"
-             android:layout_weight="1"
-             android:layout_margin="20sp"
-             android:background="#ffffff"
-             android:drawableTop="@drawable/exit"
-             android:paddingTop="10sp"
+             android:layout_height="wrap_content"
              android:text="Log Out"
+             android:layout_marginRight="10sp"
+             android:layout_marginLeft="10sp"
+             android:layout_marginBottom="15sp"
+             android:paddingTop="5sp"
              android:textColor="#83838c"
-             android:textSize="32sp" />
+             android:textSize="26sp"
+             android:background="#ffffff"
+             android:drawableTop="@drawable/exit"/>
      </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
