--- a/app/src/main/res/layout/customer_service_details.xml
+++ b/app/src/main/res/layout/customer_service_details.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:text="REQUEST DETAILS"
             android:gravity="top"
-            android:textSize="30sp"
+            android:textSize="26sp"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:layout_gravity="center"
@@ -31,21 +31,21 @@
             android:layout_height="140dp"
             android:src="@drawable/add_image"
             android:layout_marginBottom="20sp"
-            android:layout_marginTop="70sp"
+            android:layout_marginTop="50sp"
             android:layout_gravity="center"/>
 
 
         <EditText
             android:id="@+id/TextProblem"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="150sp"
             android:layout_marginBottom="20sp"
             android:hint="Description"
-            android:ems="10"
+            android:textSize="20sp"
+            android:maxLines="8"
+            android:gravity="start"
             android:background="#FFDEDCDC"
-            android:inputType="textMultiLine"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"/>
+            android:inputType="textMultiLine" />
 
         <Button
             android:id="@+id/Confirm"
