--- a/app/src/main/res/layout/history_customer_single.xml
+++ b/app/src/main/res/layout/history_customer_single.xml
@@ -8,72 +8,75 @@
     tools:context="com.example.fahad.publicservices.HistoryCustomerSingle">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10sp">
 
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20sp"
-            android:layout_marginTop="20sp"
-            android:text="date" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="301dp"
-        android:layout_height="142dp"
-        android:layout_margin="5sp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/imagePr"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/person" />
 
         <LinearLayout
-            android:layout_width="184dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
+            android:layout_margin="20dp"
             android:orientation="vertical"
-            android:layout_marginLeft="10dp">
+            >
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/imagePr"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/person"
+                android:layout_marginTop="40sp"
+                android:layout_marginBottom="15sp"
+                android:layout_gravity="center"/>
+
+
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15sp"
+                android:textSize="20sp"
+                android:layout_gravity="center"
+                android:text="date" />
 
             <TextView
                 android:id="@+id/username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10sp"
+                android:layout_margin="15sp"
+                android:textSize="20sp"
+                android:layout_gravity="center"
                 android:text="name" />
 
             <TextView
                 android:id="@+id/userphone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10sp"
+                android:layout_margin="15sp"
+                android:textSize="20sp"
+                android:layout_gravity="center"
                 android:text="phone" />
             <TextView
                 android:id="@+id/price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10sp"
+                android:layout_margin="15sp"
+                android:textSize="20sp"
+                android:layout_gravity="center"
                 android:text="price" />
+
+            <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/ratingBar"
+                android:layout_gravity="center"
+                android:layout_margin="15sp"
+                android:numStars="5"
+                android:stepSize="1"
+                android:visibility="gone"
+                />
 
         </LinearLayout>
 
-    </LinearLayout>
 
-    <RatingBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ratingBar"
-        android:layout_gravity="center"
-        android:numStars="5"
-        android:stepSize="1"
-        android:visibility="gone"
-        />
+
+
 
 </LinearLayout>
