--- a/app/src/main/res/layout/history_service_provider_single.xml
+++ b/app/src/main/res/layout/history_service_provider_single.xml
@@ -3,56 +3,56 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.fahad.publicservices.historyServiceProviderSingle">
 
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20sp">
+        android:layout_height="match_parent"
+        android:layout_margin="20dp"
+        android:orientation="vertical"
+        >
 
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20sp"
-            android:layout_marginTop="20sp"
-            android:text="date" />
-
-    </LinearLayout>
-
-
-
-        <LinearLayout
-            android:layout_width="184dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="20sp"
-            android:orientation="vertical"
-            android:layout_marginLeft="20dp">
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="25sp"
+                android:layout_marginTop="70sp"
+                android:layout_marginBottom="20sp"
+                android:layout_gravity="center"
+                android:text="date" />
 
             <TextView
                 android:id="@+id/servicename"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20sp"
+                android:textSize="25sp"
+                android:layout_margin="20sp"
+                android:layout_gravity="center"
                 android:text="name" />
 
             <TextView
                 android:id="@+id/servicephone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20sp"
+                android:textSize="25sp"
+                android:layout_margin="20sp"
+                android:layout_gravity="center"
                 android:text="phone" />
 
             <TextView
                 android:id="@+id/ppp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20sp"
+                android:textSize="25sp"
+                android:layout_margin="20sp"
+                android:layout_gravity="center"
                 android:text="price" />
 
 
