--- a/app/src/main/res/layout/activity_customer_maps.xml
+++ b/app/src/main/res/layout/activity_customer_maps.xml
@@ -119,7 +119,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/distant"
+                    android:id="@+id/RequestStatus"
                     android:textColor="@android:color/holo_red_dark"
                     android:visibility="gone"
                     android:layout_gravity="center"/>
