--- a/app/src/main/res/layout/activity_service_provider_maps.xml
+++ b/app/src/main/res/layout/activity_service_provider_maps.xml
@@ -171,7 +171,7 @@
         <Button
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:text=""
+            android:text="Complete"
             android:id="@+id/WorkStatus"/>
     </LinearLayout>
 
